--- a/apps/site-astro/src/components/content/BacklinksList.astro
+++ b/apps/site-astro/src/components/content/BacklinksList.astro
@@ -9,7 +9,6 @@ import { getSanityTypeDisplayText } from "@/lib/sanityStrings";
 import { getUrlForSanityType } from "@/lib/url";
 import { cn } from "@/lib/utils";
 import type { Backlink, BacklinkResult } from "@/queries/partials/backlink";
-import type { SanityLinkableType } from "content-models";
 
 interface Props {
   backlinks: BacklinkResult;
@@ -19,18 +18,9 @@ interface Props {
 
 const { backlinks, className, grouped = false } = Astro.props;
 
-const defaultClasses = "grid md:grid-cols-2 gap-4 not-prose";
+const defaultClasses = "grid md:grid-cols-2 gap-4";
 
-// Resource content will not have its own page
-// grab the resource content's parent resource data instead
-function getBacklinkUrl(backlink: Backlink) {
-  const backlinkObj =
-    backlink._type === "resourceContent" ? backlink.resource : backlink;
-
-  return getUrlForSanityType(backlinkObj._type, backlinkObj.slug.current);
-}
-
-type SanityTypes = SanityLinkableType | "resourceContent";
+type SanityTypes = Backlink["_type"];
 
 type BacklinkBucket = {
   [K in SanityTypes]: Backlink[];
@@ -43,7 +33,6 @@ function bucketBacklinksByType(backlinks: Backlink[]) {
     post: [],
     concept: [],
     resource: [],
-    resourceContent: [],
     tag: [],
   };
 
@@ -67,16 +56,20 @@ const buckets = backlinks ? bucketBacklinksByType(backlinks) : [];
   !grouped && (
     <div class={cn(defaultClasses, className)} data-pagefind-ignore>
       {backlinks &&
-        backlinks.map((backlink) => (
-          <a href={getBacklinkUrl(backlink)}>
-            <Card>
-              <CardHeader>
-                <CardTitle>{backlink.title}</CardTitle>
-                <CardDescription>{backlink.description}</CardDescription>
-              </CardHeader>
-            </Card>
-          </a>
-        ))}
+        backlinks.map((backlink) => {
+          return (
+            <a
+              href={getUrlForSanityType(backlink._type, backlink.slug.current)}
+            >
+              <Card>
+                <CardHeader>
+                  <CardTitle>{backlink.title}</CardTitle>
+                  <CardDescription>{backlink.description}</CardDescription>
+                </CardHeader>
+              </Card>
+            </a>
+          );
+        })}
     </div>
   )
 }
@@ -85,21 +78,33 @@ const buckets = backlinks ? bucketBacklinksByType(backlinks) : [];
   grouped &&
     Object.entries(buckets)
       .filter(([type, backlinks]) => backlinks.length > 0)
-      .map(([type, backlinks]) => (
-        <div data-pagefind-ignore>
-          <h3>{getSanityTypeDisplayText(type, true)}</h3>
-          <div class={cn(defaultClasses, className)}>
-            {backlinks.map((backlink) => (
-              <a href={getBacklinkUrl(backlink)}>
-                <Card>
-                  <CardHeader>
-                    <CardTitle>{backlink.title}</CardTitle>
-                    <CardDescription>{backlink.description}</CardDescription>
-                  </CardHeader>
-                </Card>
-              </a>
-            ))}
+      .map(([type, backlinks]: [unknown, Backlink[]]) => {
+        const typedType = type as SanityTypes;
+        return (
+          <div class="mb-10" data-pagefind-ignore>
+            <h3 class="h3 my-4">{getSanityTypeDisplayText(typedType, true)}</h3>
+            <div class={cn(defaultClasses, className)}>
+              {backlinks.map((backlink) => {
+                return (
+                  <a
+                    href={getUrlForSanityType(
+                      backlink._type,
+                      backlink.slug.current,
+                    )}
+                  >
+                    <Card>
+                      <CardHeader>
+                        <CardTitle>{backlink.title}</CardTitle>
+                        <CardDescription>
+                          {backlink.description}
+                        </CardDescription>
+                      </CardHeader>
+                    </Card>
+                  </a>
+                );
+              })}
+            </div>
           </div>
-        </div>
-      ))
+        );
+      })
 }
