--- a/apps/site-astro/src/pages/resources/[slug].astro
+++ b/apps/site-astro/src/pages/resources/[slug].astro
@@ -1,13 +1,16 @@
 ---
+import Breadcrumbs from "@/components/Breadcrumbs.astro";
 import MetaTags from "@/components/MetaTags.astro";
-import TagsList from "@/components/content/TagsList.astro";
 import BacklinksList from "@/components/content/BacklinksList.astro";
+import TagsList from "@/components/content/TagsList.astro";
 import Layout from "@/layouts/Layout.astro";
 import { titleTemplate } from "@/lib/metadata";
+import { splitIntoLines } from "@/lib/stringUtils";
+import { getUrlForSanityType } from "@/lib/url";
+import type { Backlink, ResourceBacklink } from "@/queries/partials/backlink";
 import { getAllResourcesFull } from "@/queries/resource";
 import type { InferGetStaticPropsType } from "astro";
-import type { Backlink } from "@/queries/partials/backlink";
-import { splitIntoLines } from "@/lib/stringUtils";
+import type { NestableParentResourceResult } from "@/queries/partials/allParentResources";
 
 export async function getStaticPaths() {
   const data = await getAllResourcesFull();
@@ -30,15 +33,46 @@ type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 const { resource } = Astro.props as Props;
 const descriptionLines = splitIntoLines(resource.description);
 
-// Prevent 'Resource Content' from showing in backlinks section
-// It will already show in the Resources content section
-function deduplicateBacklinks(backlinks: Backlink[]) {
-  return backlinks.filter((backlink) => backlink._type !== "resourceContent");
+// backlinks that are child resources of this resource will be
+// rendered outside of the backlinks component
+const [renderedBacklinks, childResources] = splitBacklinksAndChildResources();
+
+function splitBacklinksAndChildResources(): [Backlink[], ResourceBacklink[]] {
+  const backlinks: Backlink[] = [];
+  const childResources: ResourceBacklink[] = [];
+
+  resource.backlinks?.forEach((backlink) => {
+    if (
+      backlink._type === "resource" &&
+      backlink.parentResource?.slug.current === resource.slug.current
+    ) {
+      childResources.push(backlink);
+    } else {
+      backlinks.push(backlink);
+    }
+  });
+
+  return [backlinks, childResources];
 }
 
-const renderedBacklinks = resource.backlinks
-  ? deduplicateBacklinks(resource.backlinks)
-  : [];
+// Render breadcrumbs if this resource is a child of other resources
+const breadcrumbLinks: { url?: string; text: string }[] = [];
+
+if (resource.parentResource) {
+  let currentResource: NestableParentResourceResult = resource;
+  while (currentResource?.parentResource) {
+    currentResource = currentResource.parentResource;
+    if (!currentResource) {
+      break;
+    }
+    breadcrumbLinks.unshift({
+      url: getUrlForSanityType("resource", currentResource.slug.current),
+      text: currentResource.title,
+    });
+  }
+
+  breadcrumbLinks.push({ text: resource.title });
+}
 ---
 
 <Layout>
@@ -48,6 +82,11 @@ const renderedBacklinks = resource.backlinks
     slot="metadata"
   />
   <div class="prose-custom content-container">
+    {
+      breadcrumbLinks.length > 0 && (
+        <Breadcrumbs links={breadcrumbLinks} class="" />
+      )
+    }
     <h1 class="h2">{resource.title}</h1>
     {resource.tags && <TagsList tags={resource.tags} asLinks={true} />}
     <p><a href={resource.url}>{resource.url}</a></p>
@@ -55,30 +94,42 @@ const renderedBacklinks = resource.backlinks
     {descriptionLines.map((line, i) => <p class="p" set:html={line} />)}
 
     {
-      resource.resourceContent && (
+      childResources && (
         <div>
-          {resource.resourceContent.map((rc) => {
+          {childResources.map((childResource) => {
+            const childResourceDescriptionLines = splitIntoLines(
+              childResource.description,
+            );
             return (
               <div>
                 <h3>
-                  {rc.url ? <a href={rc.url}>{rc.title}</a> : <>{rc.title}</>}
+                  <a
+                    href={getUrlForSanityType(
+                      childResource._type,
+                      childResource.slug.current,
+                    )}
+                    class="link"
+                  >
+                    {childResource.title}
+                  </a>
                 </h3>
-
-                <p>{rc.description}</p>
+                {childResourceDescriptionLines.map((line, i) => (
+                  <p class="p" set:html={line} />
+                ))}
               </div>
             );
           })}
         </div>
       )
     }
-
-    {
-      renderedBacklinks && renderedBacklinks.length > 0 && (
-        <>
-          <h3>Backlinks</h3>
-          <BacklinksList backlinks={renderedBacklinks} />
-        </>
-      )
-    }
   </div>
+
+  {
+    renderedBacklinks && renderedBacklinks.length > 0 && (
+      <aside class="content-container prose-width">
+        <h3 class="h3 my-4">Backlinks</h3>
+        <BacklinksList backlinks={renderedBacklinks} />
+      </aside>
+    )
+  }
 </Layout>
